Fixed weapon training, integrated Go Explore, expanded pre-requisite search for recipe-making

--- a/Languages/English/Keyed/HumanResources_keys.xml
+++ b/Languages/English/Keyed/HumanResources_keys.xml
@@ -9,11 +9,12 @@
   <MessageTrainingComplete>{0_nameDef} has mastered the {1}.</MessageTrainingComplete>
   <NothingToAddToLibrary>You know nothing, {0_nameFull}.</NothingToAddToLibrary>
   <AlreadyKnowsTheWholeLibrary>{0_nameDef} has read all the books.</AlreadyKnowsTheWholeLibrary>
-  <NoWeaponToLearn>{0_nameDef} believes those weapons are evil, {0_pronoun} won't touch them.</NoWeaponToLearn>
+  <NoWeaponToLearn>{0_nameDef} already knows how to use those weapons.</NoWeaponToLearn>
   <DoesntKnowHowToBuild>{0_nameDef} doesn't know how to build a {1}.</DoesntKnowHowToBuild>
   <DoesntKnowHowToCraft>{0_nameDef} doesn't know how to {1}.</DoesntKnowHowToCraft>
   <DoesntKnowThisPlant>{0_nameDef} doesn't know how to cultivate {1}.</DoesntKnowThisPlant>
-  <UnknownWeapon>Unknown Weapon</UnknownWeapon>
+  <UnknownWeapon>{0_nameDef} has not been trained to use this weapon.</UnknownWeapon>
+  <EvilWeapon>{0_nameDef} believes this strange weapon is evil, {0_pronoun} won't touch it.</EvilWeapon>
   <ShowCommon>show common</ShowCommon>
   <KnowledgeLabel>{0} knowledge</KnowledgeLabel>
   <Book>Book of {0}</Book>
