Made the Tech tab use english Titles.

--- a/Languages/English/Keyed/HumanResources_keys.xml
+++ b/Languages/English/Keyed/HumanResources_keys.xml
@@ -3,8 +3,8 @@
   
   <!--UI-->
   <TabKnowledge>Tech</TabKnowledge>
-  <TabKnowledgeTitle>Conhecimentos</TabKnowledgeTitle>
-  <TabKnowledgeWeapons>Perícia com armas</TabKnowledgeWeapons>
+  <TabKnowledgeTitle>Knowledge</TabKnowledgeTitle>
+  <TabKnowledgeWeapons>Weapons Proficiency</TabKnowledgeWeapons>
   <TabCatalogue>Catalog</TabCatalogue>
   <ShowCommon>show common</ShowCommon>
   <AvailableBooksReport>{0} books in {1} shelves</AvailableBooksReport>
