--- a/Languages/English/Keyed/HumanResources_keys.xml
+++ b/Languages/English/Keyed/HumanResources_keys.xml
@@ -45,6 +45,9 @@
   <NothingToAddToLibrary>You know nothing, {0_nameFull}.</NothingToAddToLibrary>
   <AlreadyKnowsTheWholeLibrary>{0_nameDef} has read all the books.</AlreadyKnowsTheWholeLibrary>
   <LacksFundamentalKnowledge>{0_nameDef} is missing basic knowledge on those subjects.</LacksFundamentalKnowledge>
+  <NoWeaponsFoundToLearn>No available weapons to train.</NoWeaponsFoundToLearn>
+  <MissingRequirementToLearnWeapon>{0_nameDef} has no corresponding knowledge or books to learn about {1}.</MissingRequirementToLearnWeapon>
+  <ThoseWeapons>those weapons</ThoseWeapons>
   <NoWeaponToLearn>{0_nameDef} already knows how to use those weapons.</NoWeaponToLearn>
   <DoesntKnowHowToBuild>{0_nameDef} doesn't know how to build a {1} (requires {2}).</DoesntKnowHowToBuild>
   <DoesntKnowHowToRepair>{0_nameDef} doesn't know how to repair a {1} (requires {2}).</DoesntKnowHowToRepair>
