--- a/Languages/ChineseTraditional/DefInjected/WorkTypeDef/WorkTypes.xml
+++ b/Languages/ChineseTraditional/DefInjected/WorkTypeDef/WorkTypes.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <HR_Learn.label>學習</HR_Learn.label>
+  <HR_Learn.label>學習</HR_Learn.label> <!--I changed from "learn" to "study", please review-->
   <HR_Learn.description>獲得新知識。</HR_Learn.description>
   <HR_Learn.labelShort>學習</HR_Learn.labelShort>
   <HR_Learn.pawnLabel>學生</HR_Learn.pawnLabel>
