Fixed pawns avoiding training weapons when a weapon they know is selected and present, plus minor tweaks and some cleaning up.

--- a/Languages/English/Keyed/HumanResources_keys.xml
+++ b/Languages/English/Keyed/HumanResources_keys.xml
@@ -10,8 +10,8 @@
   <ShowRanged>Show ranged weapons.</ShowRanged>
   <ShowAvailable>Show techs available to learn.</ShowAvailable>
   <ShowCompact>Compact view.</ShowCompact>
-  <Expand>Expand.</Expand>
-  <Contract>Contract.</Contract>
+  <Expand>Expand</Expand>
+  <Collapse>Collapse</Collapse>
   <TabCatalogue>Catalog</TabCatalogue>
   <AvailableBooksReport>{0} books in {1} shelves</AvailableBooksReport>
 
