--- a/Languages/ChineseSimplified/Keyed/HumanResources_keys.xml
+++ b/Languages/ChineseSimplified/Keyed/HumanResources_keys.xml
@@ -5,8 +5,14 @@
   <TabKnowledge>科技</TabKnowledge>
   <!--MISSING:--> <TabKnowledgeTitle>Knowledge</TabKnowledgeTitle>
   <!--MISSING:--> <TabKnowledgeWeapons>Weapons Proficiency</TabKnowledgeWeapons>
-  <TabCatalogue>目录</TabCatalogue>
   <ShowCommon>显示原版</ShowCommon>
+  <!--MISSING:--><ShowMelee>Show melee weapons.</ShowMelee>
+  <!--MISSING:--><ShowRanged>Show ranged weapons.</ShowRanged>
+  <!--MISSING:--><ShowAvailable>Show techs available to learn.</ShowAvailable>
+  <!--MISSING:--><ShowCompact>Compact view.</ShowCompact>
+  <!--MISSING:--><Expand>Expand</Expand>
+  <!--MISSING:--><Collapse>Collapse</Collapse>
+  <TabCatalogue>目录</TabCatalogue>
   <AvailableBooksReport>{1}号书架中有{0}本书</AvailableBooksReport>
 
   <!--Settings-->
@@ -22,6 +28,10 @@
   <!--MISSING:--> <WeaponPoolMode_Both>both weapon lists</WeaponPoolMode_Both>
   <!--MISSING:--> <WeaponPoolMode_TechLevel>the faction's tech level only</WeaponPoolMode_TechLevel>
   <!--MISSING:--> <WeaponPoolMode_Scenario>the scenario only</WeaponPoolMode_Scenario>
+  <!--MISSING:--> <ResearchSpeedTiedToDifficultyTitle>Difficulty settings slows down research.</ResearchSpeedTiedToDifficultyTitle>
+  <!--MISSING:--> <ResearchSpeedTiedToDifficultyDesc>If checked, the base speed for research is tied to the difficulty settings, with no changes on Easy and up to 70% decrease on Hard. If unchecked, it defaults to 90% slower than vanilla.</ResearchSpeedTiedToDifficultyDesc>
+  <!--MISSING:--> <StudySpeedTiedToDifficultyTitle>Difficulty settings slows down tech studying.</StudySpeedTiedToDifficultyTitle>
+  <!--MISSING:--> <StudySpeedTiedToDifficultyDesc>If checked, the base speed for studying new techs is tied to the difficulty settings, dropping to 90% on Medium up to 80% on hard.</StudySpeedTiedToDifficultyDesc>
 
   <!--Things-->
   <BookStoreEmpty>空的</BookStoreEmpty>
