--- a/Languages/PortugueseBrazilian/Keyed/HumanResources_keys.xml
+++ b/Languages/PortugueseBrazilian/Keyed/HumanResources_keys.xml
@@ -5,8 +5,14 @@
   <TabKnowledge>Tech</TabKnowledge>
   <TabKnowledgeTitle>Conhecimentos</TabKnowledgeTitle>
   <TabKnowledgeWeapons>Perícia com armas</TabKnowledgeWeapons>
+  <ShowCommon>Mostrar comuns</ShowCommon>
+  <ShowMelee>Mostrar armas de corpo-a-corpo.</ShowMelee>
+  <ShowRanged>Mostrar armas de longo alcance.</ShowRanged>
+  <ShowAvailable>Mostrar tecnologias disponíveis para serem aprendidas.</ShowAvailable>
+  <ShowCompact>Vizualização compacta.</ShowCompact>
+  <Expand>Expandir</Expand>
+  <Collapse>Recolher</Collapse>
   <TabCatalogue>Catálogo</TabCatalogue>
-  <ShowCommon>mostrar comuns</ShowCommon>
   <AvailableBooksReport>{0} livros em {1} estantes</AvailableBooksReport>
 
   <!--Settings-->
@@ -22,7 +28,11 @@
   <WeaponPoolMode_Both>de ambas as listas</WeaponPoolMode_Both>
   <WeaponPoolMode_TechLevel>do nível tecnológico da facção, somente</WeaponPoolMode_TechLevel>
   <WeaponPoolMode_Scenario>dentre as incluídas no cenário, somente</WeaponPoolMode_Scenario>
-  
+  <ResearchSpeedTiedToDifficultyTitle>Dificuldade afeta a velocidade de pesquisa.</ResearchSpeedTiedToDifficultyTitle>
+  <ResearchSpeedTiedToDifficultyDesc>Quando marcado, a velocidade de pesquisa é vinculada ao nível de dificuldade selecionado. No nível fácil ela parmanece a mesma, mas ela é reduzida até em 70% no nível difícil. Quando desmarcado, ela retorna ao padrão de 90% mais lento que o jogo base.</ResearchSpeedTiedToDifficultyDesc>
+  <StudySpeedTiedToDifficultyTitle>Dificuldade afeta a velocidade de estudo.</StudySpeedTiedToDifficultyTitle>
+  <StudySpeedTiedToDifficultyDesc>Quando marcado, a velocidade básica para estudos é vinculada ao nível de dificuldade selecionado: reduzida para 90% no nível médio até 80% no nível difícil.</StudySpeedTiedToDifficultyDesc>
+
   <!--Things-->
   <BookStoreEmpty>Vazia</BookStoreEmpty>
   <BookStoreCapacity>Tecnologias em arquivo: {0}/{1}</BookStoreCapacity>
