--- a/Languages/ChineseTraditional/Keyed/HumanResources_keys.xml
+++ b/Languages/ChineseTraditional/Keyed/HumanResources_keys.xml
@@ -3,15 +3,15 @@
 
   <!--UI-->
   <TabKnowledge>科技</TabKnowledge>
-  <!--MISSING:--> <TabKnowledgeTitle>Knowledge</TabKnowledgeTitle>
-  <!--MISSING:--><TabKnowledgeWeapons>Weapons Proficiency</TabKnowledgeWeapons>
+  <TabKnowledgeTitle>知識</TabKnowledgeTitle>
+  <TabKnowledgeWeapons>武器熟練度</TabKnowledgeWeapons>
   <ShowCommon>顯示原版</ShowCommon>
-  <!--MISSING:--><ShowMelee>Show melee weapons.</ShowMelee>
-  <!--MISSING:--><ShowRanged>Show ranged weapons.</ShowRanged>
-  <!--MISSING:--><ShowAvailable>Show techs available to learn.</ShowAvailable>
-  <!--MISSING:--><ShowCompact>Compact view.</ShowCompact>
-  <!--MISSING:--><Expand>Expand</Expand>
-  <!--MISSING:--><Collapse>Collapse</Collapse>
+  <ShowMelee>顯示近戰武器。</ShowMelee>
+  <ShowRanged>顯示遠程武器。</ShowRanged>
+  <ShowAvailable>顯示可供學習的技術。</ShowAvailable>
+  <ShowCompact>小窗口</ShowCompact>
+  <Expand>擴展</Expand>
+  <Collapse>失敗</Collapse>
   <TabCatalogue>目錄</TabCatalogue>
   <AvailableBooksReport>{1}號書架中有{0}本書</AvailableBooksReport>
 
@@ -23,15 +23,15 @@
   <TechPoolMode_Starting>僅該派系的起始技術</TechPoolMode_Starting>
   <TechPoolIncludesScenarioTitle>包括劇本設定的開局科技</TechPoolIncludesScenarioTitle>
   <TechPoolIncludesScenarioDesc>如果選中，還將包括您在劇本編輯器中添加的開局科技。</TechPoolIncludesScenarioDesc>
-  <!--MISSING:--> <WeaponPoolModeTitle>Combat specialists start with weapons from...</WeaponPoolModeTitle>
-  <!--MISSING:--> <WeaponPoolModeDesc>Defines the pool from which to draw weapons proficiency for the player's colonists who are expert shooters or brawlers when they are created.</WeaponPoolModeDesc>
-  <!--MISSING:--> <WeaponPoolMode_Both>both weapon lists</WeaponPoolMode_Both>
-  <!--MISSING:--> <WeaponPoolMode_TechLevel>the faction's tech level only</WeaponPoolMode_TechLevel>
-  <!--MISSING:--> <WeaponPoolMode_Scenario>the scenario only</WeaponPoolMode_Scenario>
-  <!--MISSING:--> <ResearchSpeedTiedToDifficultyTitle>Difficulty settings slows down research.</ResearchSpeedTiedToDifficultyTitle>
-  <!--MISSING:--> <ResearchSpeedTiedToDifficultyDesc>If checked, the base speed for research is tied to the difficulty settings, with no changes on Easy and up to 70% decrease on Hard. If unchecked, it defaults to 90% slower than vanilla.</ResearchSpeedTiedToDifficultyDesc>
-  <!--MISSING:--> <StudySpeedTiedToDifficultyTitle>Difficulty settings slows down tech studying.</StudySpeedTiedToDifficultyTitle>
-  <!--MISSING:--> <StudySpeedTiedToDifficultyDesc>If checked, the base speed for studying new techs is tied to the difficulty settings, dropping to 90% on Medium up to 80% on hard.</StudySpeedTiedToDifficultyDesc>
+  <WeaponPoolModeTitle>初始攜帶武器的戰鬥專家</WeaponPoolModeTitle>
+  <WeaponPoolModeDesc>定義當玩家的殖民者（僅限於射擊或格鬥專精）被生成時可攜帶的武器池。</WeaponPoolModeDesc>
+  <WeaponPoolMode_Both>兩種武器清單</WeaponPoolMode_Both>
+  <WeaponPoolMode_TechLevel>該陣營的技術等級</WeaponPoolMode_TechLevel>
+  <WeaponPoolMode_Scenario>僅劇本</WeaponPoolMode_Scenario>
+  <ResearchSpeedTiedToDifficultyTitle>高難度會減緩研究速度。</ResearchSpeedTiedToDifficultyTitle>
+  <ResearchSpeedTiedToDifficultyDesc>開啟此項研究速度將隨難度增加而減緩，最多降低70%。不開啟此項時，默認為原版的90%。</ResearchSpeedTiedToDifficultyDesc>
+  <StudySpeedTiedToDifficultyTitle>高難度會減緩學習速度。</StudySpeedTiedToDifficultyTitle>
+  <StudySpeedTiedToDifficultyDesc>開啟此項學習新技術的基本速度將與難度設置相關聯，其中中等難度降至90％，最高降至80％。</StudySpeedTiedToDifficultyDesc>
 
   <!--Things-->
   <BookStoreEmpty>空的</BookStoreEmpty>
@@ -44,32 +44,34 @@
   <BookCompendium>{0}綱要</BookCompendium>
   <BookManual>{0}手冊</BookManual>
   <BookTheory>{0}論著</BookTheory>
-  <BookDatabase>{0}資料庫</BookDatabase>
+  <BookDatabase>{0}數據庫</BookDatabase>
 
   <!--Feedback-->
-  <MessageStudyComplete>{0_nameDef}已經了解了{1}的祕密。</MessageStudyComplete>
+  <MessageStudyComplete>{0_nameDef}已經了解了{1}的秘密。</MessageStudyComplete>
   <MessageDocumentComplete>{0_nameDef}在{1}上寫了一本書。</MessageDocumentComplete>
   <MessageFiledTech>{0}的知識已添加到我們的庫中。</MessageFiledTech>
   <MessageEjectedTech>{0}的知識已從我們的庫中刪除。</MessageEjectedTech>
   <MessageTrainingComplete>{0_nameDef}已掌握{1}。</MessageTrainingComplete>
   <NothingToAddToLibrary>你什麼都不懂，{0_nameFull}！</NothingToAddToLibrary>
   <AlreadyKnowsTheWholeLibrary>{0_nameDef}已閱讀所有書籍。</AlreadyKnowsTheWholeLibrary>
-  <!--MISSING:--> <NoWeaponsFoundToLearn>No available weapons to train.</NoWeaponsFoundToLearn>
-  <!--MISSING:--> <MissingRequirementToLearnWeapon>{0_nameDef} has no corresponding knowledge or books to learn about {1}.</MissingRequirementToLearnWeapon>
-  <!--MISSING:--> <ThoseWeapons>those weapons</ThoseWeapons>
   <LacksFundamentalKnowledge>{0_nameDef}缺少有關這些課題的基本知識。</LacksFundamentalKnowledge>
+  <NoWeaponsFoundToLearn>沒有可訓練的武器。</NoWeaponsFoundToLearn>
+  <MissingRequirementToLearnWeapon>{0_nameDef}沒有有關{1}的知識或書籍。</MissingRequirementToLearnWeapon>
+  <ThoseWeapons>those weapons</ThoseWeapons>
   <NoWeaponToLearn>{0_nameDef}已經知道如何使用這些武器。</NoWeaponToLearn>
   <DoesntKnowHowToBuild>{0_nameDef}不知道如何建造{1}（需要{2}）。</DoesntKnowHowToBuild>
   <DoesntKnowHowToRepair>{0_nameDef}不知道如何修復{1}（需要{2}）。</DoesntKnowHowToRepair>
   <DoesntKnowHowToCraft>{0_nameDef}不知道如何製作{1}（需要{2}）。</DoesntKnowHowToCraft>
   <DoesntKnowThisPlant>{0_nameDef}不知道如何栽種{1}（需要{2}）。</DoesntKnowThisPlant>
   <UnknownWeapon>{0_nameDef}尚未接受使用此武器的訓練。</UnknownWeapon>
-  <EvilWeapon>{0_nameDef}認爲這種奇怪的武器是邪惡的，{0_pronoun}不會碰它。</EvilWeapon>
+  <EvilWeapon>{0_nameDef}認為這種奇怪的武器是邪惡的，{0_pronoun}不會碰它。</EvilWeapon>
   <TechAlreadyKnown>{0}是已知的技術。</TechAlreadyKnown>
 
   <!--Go Explore-->
   <LetterResearchRequest_SuccessHR>這項研究是成功的。通過合作，您對{2}的理解有所提高。\n\n與{0}的關係已改善了{1}。</LetterResearchRequest_SuccessHR>
-  <LetterResearchRequest_TriumphHR>研究取得了巨大的成功！通過一同通力合作，您取得了突破，並發現了{2}的祕密。\n\n與{0}的關係已改善了{1}。</LetterResearchRequest_TriumphHR>
+  <LetterResearchRequest_TriumphHR>研究取得了巨大的成功！通過一同通力合作，您取得了突破，併發現了{2}的秘密。\n\n與{0}的關係已改善了{1}。</LetterResearchRequest_TriumphHR>
   <ResearchRequestXPGainHR>{0}，您的研究人員，在{1}獲得了寶貴的專業知識，並獲得了{2}的智識。</ResearchRequestXPGainHR>
+
+  <!--MISSING:-->
 
 </LanguageData> 
