--- a/Languages/English/Keyed/HumanResources_keys.xml
+++ b/Languages/English/Keyed/HumanResources_keys.xml
@@ -28,6 +28,8 @@
   <WeaponPoolMode_Both>both weapon lists</WeaponPoolMode_Both>
   <WeaponPoolMode_TechLevel>the faction's tech level only</WeaponPoolMode_TechLevel>
   <WeaponPoolMode_Scenario>the scenario only</WeaponPoolMode_Scenario>
+  <FreeScenarioWeaponsTitle>All colonists start with scenario weapons.</FreeScenarioWeaponsTitle>
+  <FreeScenarioWeaponsDesc>If checked, any weapons you add on the scenario editor will also be included on the list of weapons the player's colonists can use.</FreeScenarioWeaponsDesc>
   <ResearchSpeedTiedToDifficultyTitle>Difficulty settings slows down research.</ResearchSpeedTiedToDifficultyTitle>
   <ResearchSpeedTiedToDifficultyDesc>If checked, the base speed for research is tied to the difficulty settings, with no changes on Easy and up to 70% decrease on Hard. If unchecked, it defaults to 90% slower than vanilla.</ResearchSpeedTiedToDifficultyDesc>
   <StudySpeedTiedToDifficultyTitle>Difficulty settings slows down tech studying.</StudySpeedTiedToDifficultyTitle>
