Cleared ambiguity on dificulty scaling descriptions.

--- a/Languages/Portuguese/Keyed/HumanResources_keys.xml
+++ b/Languages/Portuguese/Keyed/HumanResources_keys.xml
@@ -31,9 +31,9 @@
   <FreeScenarioWeaponsTitle>Todos os colonos começam com as armas do cenário.</FreeScenarioWeaponsTitle>
   <FreeScenarioWeaponsDesc>Quando marcado, qualquer arma incluída no cenário também será acrescentada à lista de armas que os colonos podem usar. (O cenário do "Explorador Rico" foi modificado para sempre fazer isso, independente do que for marcado aqui.)</FreeScenarioWeaponsDesc>
   <ResearchSpeedTiedToDifficultyTitle>Dificuldade afeta a velocidade de pesquisa.</ResearchSpeedTiedToDifficultyTitle>
-  <ResearchSpeedTiedToDifficultyDesc>Quando marcado, a velocidade de pesquisa é vinculada ao nível de dificuldade selecionado. No nível fácil ela parmanece a mesma, mas ela é reduzida até em 70% no nível difícil. Quando desmarcado, ela retorna ao padrão de 90% mais lento que o jogo base.</ResearchSpeedTiedToDifficultyDesc>
+  <ResearchSpeedTiedToDifficultyDesc>Quando marcado, a velocidade de pesquisa é vinculada ao nível de dificuldade selecionado. No nível fácil ela parmanece a mesma, mas ela é reduzida até em 30% no nível difícil. Quando desmarcado, ela retorna ao padrão de 10% mais lento que o jogo base.</ResearchSpeedTiedToDifficultyDesc>
   <StudySpeedTiedToDifficultyTitle>Dificuldade afeta a velocidade de estudo.</StudySpeedTiedToDifficultyTitle>
-  <StudySpeedTiedToDifficultyDesc>Quando marcado, a velocidade básica para estudos é vinculada ao nível de dificuldade selecionado: reduzida para 90% no nível médio até 80% no nível difícil.</StudySpeedTiedToDifficultyDesc>
+  <StudySpeedTiedToDifficultyDesc>Quando marcado, a velocidade básica para estudos é vinculada ao nível de dificuldade selecionado: ela é reduzida em 10% no nível médio e até em 20% no nível difícil.</StudySpeedTiedToDifficultyDesc>
 
   <!--Things-->
   <BookStoreEmpty>Vazia</BookStoreEmpty>
